# crtl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  assert.c  assert.h  config.h  crtl.sln  crtl.vcxproj  ctype.c  ctype.h  errno.c  errno.h  limits.h  main.c  makefile  math.c  math.h  rtconfig.h  stdarg.c  stdarg.h  stddef.h  stdint.h  stdio.c  stdio.h  stdlib.c  stdlib.h  string.c  string.h  syscall.c  test.h  test_ctype.c  test_main.c  test_math.c  test_stdio.c  test_stdlib.c  test_string.c  todo.md  (+2 more)
.github/: copilot-instructions.md
.github/workflows/: cmake-single-platform.yml
